specs/grammar-tests/negative/wrong-typed-redirects-follow.lace
get("$x", { redirects: { follow: "yes" } }).expect(status: 200)
